MDEV-8590: Fix embedded build failure